// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect should render <MenuSelect /> with custom templates 1`] = `
<div
  className="root"
>
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      className="option"
      value=""
    >
      defaultOption
    </option>
    <option
      className="option"
      value="foo"
    >
      foo
    </option>
    <option
      className="option"
      value="bar"
    >
      bar
    </option>
  </select>
</div>
`;

exports[`MenuSelect should render <MenuSelect /> with items 1`] = `
<div
  className="root"
>
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      className="option"
      value=""
    >
      See all
    </option>
    <option
      className="option"
      value="foo"
    >
      foo (0)
    </option>
    <option
      className="option"
      value="bar"
    >
      bar (0)
    </option>
  </select>
</div>
`;

exports[`MenuSelect should render <MenuSelect /> with no items 1`] = `
<div
  className="root noRefinementRoot"
>
  <select
    className="select"
    onChange={[Function]}
    value=""
  >
    <option
      className="option"
      value=""
    >
      See all
    </option>
  </select>
</div>
`;
